--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,6 @@ jobs:
           goarch: ${{ matrix.goarch }}
           ldflags: "-w -s"
           compress_assets: "OFF"
-          asset_name: smx-${{ matrix.goarch }}
+          asset_name: smx
           md5sum: false
           overwrite: true
