--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
-          ldflags: "-w -s"
+          ldflags: "-w -s -X main.version=${{ github.ref_name }}"
           compress_assets: "OFF"
           asset_name: smx-${{ matrix.goarch }}
           md5sum: false
